fix navbars creating tall views due to overflow

--- a/app/assets/stylesheets/hera/modules/_sidebar.scss
+++ b/app/assets/stylesheets/hera/modules/_sidebar.scss
@@ -5,8 +5,8 @@ body:has(.main-sidebar.sidebar-collapsed) {
 
 .sidebar {
   --padding: 1rem;
-  background-color: $white;
   --margin: 1rem;
+  background-color: $white;
   position: sticky;
   top: calc(#{$navbar-height} * 2);
   height: calc(100vh - (#{$navbar-height} * 2));
@@ -15,6 +15,7 @@ body:has(.main-sidebar.sidebar-collapsed) {
     display: flex;
     flex-direction: column;
     height: 100%;
+    max-height: calc(100vh - (#{$navbar-height} * 2));
     justify-content: space-between;
     padding: var(--padding) var(--padding) 0.25rem var(--padding);
     overflow-y: scroll;
@@ -71,18 +72,20 @@ body:has(.main-sidebar.sidebar-collapsed) {
       }
 
       .list-item {
+        align-items: center;
         border-bottom: 1px solid $border-color;
         display: flex;
         flex-direction: row;
         font-size: $text-small;
         justify-content: space-between;
-        margin-bottom: var(--margin);
-        padding-bottom: var(--padding);
+        margin-bottom: calc(var(--margin) / 1.5);
+        padding-bottom: calc(var(--padding) / 1.5);
 
-        a {
+        & > a {
           -webkit-line-clamp: 2;
           -webkit-box-orient: vertical;
           display: -webkit-box;
+          line-height: 1.15rem;
           overflow: hidden;
           text-overflow: ellipsis;
         }
@@ -98,6 +101,10 @@ body:has(.main-sidebar.sidebar-collapsed) {
         }
       }
     }
+  }
+
+  &.sidebar-expanded {
+    overflow: hidden;
   }
 
   .sidebar-toggle {
@@ -165,7 +172,7 @@ body:has(.main-sidebar.sidebar-collapsed) {
     width: $sidebar-width;
 
     &.sidebar-collapsed {
-      width: 5px;
+      width: 0.5rem;
     }
 
     .sidebar-content {
